# opencv-tesseract-android

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/dev/hieuho/test_open_cv/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/tesseractlib/: CMakeLists.txt
app/src/main/cpp/tesseractlib/tesseract/: CMakeLists.txt
app/src/main/java/dev/hieuho/test_open_cv/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/dev/hieuho/test_open_cv/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
